2018-06-16 =========== Feldtest war erfolgreich Allerdings brauchen wir doch eine UNDO Funktion Auch ein Blinken der Flagge, welches die restliche Spielzeit anzeigt, wäre sehr gut.